--- a/lecture-03/lab.ipynb
+++ b/lecture-03/lab.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "source": [
     "import random\r\n",
     "from copy import deepcopy\r\n",
@@ -149,91 +149,12 @@
     "                    print(\"Not a valid column. Try again!\")\r\n",
     "    else:\r\n",
     "        mcts = MCTS()\r\n",
-    "        a = mcts.choose(s, 0.01)\r\n",
+    "        a = mcts.choose(s, 1)\r\n",
     "    s = result(s, a)\r\n",
     "    printBoard(s)\r\n",
     "    print(utility(s))\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0  1  2  3  4  5  6\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      "X  .  .  .  .  .  .\n",
-      "\n",
-      "0\n",
-      "0  1  2  3  4  5  6\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      "X  .  .  O  .  .  .\n",
-      "\n",
-      "0\n",
-      "0  1  2  3  4  5  6\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      "X  .  .  O  X  .  .\n",
-      "\n",
-      "0\n",
-      "0  1  2  3  4  5  6\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  O  .  .  .\n",
-      "X  .  .  O  X  .  .\n",
-      "\n",
-      "0\n",
-      "0  1  2  3  4  5  6\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  O  X  .  .\n",
-      "X  .  .  O  X  .  .\n",
-      "\n",
-      "0\n",
-      "0  1  2  3  4  5  6\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  O  .  .  .\n",
-      ".  .  .  O  X  .  .\n",
-      "X  .  .  O  X  .  .\n",
-      "\n",
-      "0\n",
-      "0  1  2  3  4  5  6\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  O  X  .  .\n",
-      ".  .  .  O  X  .  .\n",
-      "X  .  .  O  X  .  .\n",
-      "\n",
-      "0\n",
-      "0  1  2  3  4  5  6\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  .  .  .  .\n",
-      ".  .  .  O  .  .  .\n",
-      ".  .  .  O  X  .  .\n",
-      ".  .  .  O  X  .  .\n",
-      "X  .  .  O  X  .  .\n",
-      "\n",
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {
     "id": "-jWBNC6j1O91"
    }
@@ -408,7 +329,12 @@
    "execution_count": null,
    "source": [
     "## Play against the MCTS agent\r\n",
-    "pass"
+    "pass\r\n",
+    "2 * root(x) * d(root(x)) + d(root(x))^2 = dx\r\n",
+    "\r\n",
+    "d(root(x)) * ((2 * root(x)) + d(root(x))) = dx\r\n",
+    "\r\n",
+    "d(root(x)) = dx + 2 * root(x)) + d(root(x))\r\n"
    ],
    "outputs": [],
    "metadata": {}
