--- a/lecture-03/lab.ipynb
+++ b/lecture-03/lab.ipynb
@@ -329,12 +329,7 @@
    "execution_count": null,
    "source": [
     "## Play against the MCTS agent\r\n",
-    "pass\r\n",
-    "2 * root(x) * d(root(x)) + d(root(x))^2 = dx\r\n",
-    "\r\n",
-    "d(root(x)) * ((2 * root(x)) + d(root(x))) = dx\r\n",
-    "\r\n",
-    "d(root(x)) = dx + 2 * root(x)) + d(root(x))\r\n"
+    "pass\r\n"
    ],
    "outputs": [],
    "metadata": {}
