--- a/lecture-03/lab.ipynb
+++ b/lecture-03/lab.ipynb
@@ -288,7 +288,7 @@
     "        \"Send the reward back up to the ancestors of the leaf\"\r\n",
     "        while not node == None:\r\n",
     "            node.N += 1\r\n",
-    "            node.Q += reward\r\n",
+    "            node.Q = node.Q + reward if playerTurn(node.state) == MIN else node.Q - reward \r\n",
     "            node = node.parent\r\n",
     "\r\n",
     "    def choose(self, state : ArrayState, maxTime: float) -> int:\r\n",
